--- a/Chat/index.cshtml
+++ b/Chat/index.cshtml
@@ -1,13 +1,6 @@
-<!-- Single statement block -->
-@{ var myMessage =	"Hello World"; }
-
-<!-- Inline expression or variable -->
-<p>The value of myMessage is: @myMessage</p> 
-
-<!--	Multi-statement block -->
-@{
-var greeting = "Welcome to our site!";
-var weekDay = DateTime.Now.DayOfWeek;
-var greetingMessage = greeting + " Today is: " + weekDay;
-}
-<p>The greeting is: @greetingMessage</p>
+<html>
+<body>
+     <h1>Hello Web Pages</h1>
+     <p>The time is @DateTime.Now</p>
+</body>
+</html>
